--- a/client/index.html
+++ b/client/index.html
@@ -1,93 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
-        type="text/javascript" charset="utf-8"></script>
-    <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
-        type="text/javascript" charset="utf-8"></script>
-    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
-    <meta name="viewport" content="initial-scale=1.0,
-            width=device-width" />
-        <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
-            type="text/javascript" charset="utf-8"></script>
-        <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
-            type="text/javascript" charset="utf-8"></script>
-        <script src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"
-            type="text/javascript" charset="utf-8"></script>
-        <link rel="stylesheet" type="text/css"
-            href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
-            <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
-            <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"
-               type="text/javascript" charset="utf-8"></script>
-            <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"
-               type="text/javascript" charset="utf-8"></script>
-            <script src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"
-               type="text/javascript" charset="utf-8"></script>
-</head>
-<body>
-<div id="banner">
-    <H1>Smart Cane GPS Map</H1>
-</div>
-<div style="width: 640px; height: 480px" id="mapContainer"></div>
-<script>
-    //Initialize the Platform object:
-    var platform = new H.service.Platform({
-        'apikey': '{YOUR_API_KEY}'
-    });
-
-    // Get the default map types from the Platform object:
-    var defaultLayers = platform.createDefaultLayers();
-
-    // Instantiate the map:
-    var map = new H.Map(
-        document.getElementById('mapContainer'),
-        defaultLayers.vector.normal.map,
-        {
-            zoom: 15,
-            center: { lng: 145.060374, lat: -37.8362118 }
-        });
-    // Enable the event system on the map instance:
-    var mapEvents = new H.mapevents.MapEvents(map);
-
-    // Add event listener:
-    map.addEventListener('tap', function(evt) {
-    // Log 'tap' and 'mouse' events:
-    console.log(evt.type, evt.currentPointer.type);
-    }); 
-
-    // Instantiate the default behavior, providing the mapEvents object:
-    var behavior = new H.mapevents.Behavior(mapEvents);    
-    // Create the default UI:
-    var ui = H.ui.UI.createDefault(map, defaultLayers);
-</script>
-<style>
-    body{
-        background-color: lightcyan;
-    }
-    #banner{
-        top: 0px;
-        left: 0px;
-        position: fixed;
-        z-index: 2;
-        font-size: 17px;
-        background-color: #282A35;
-        color: #f1f1f1;
-        width: 100%;
-        padding: 0;
-        letter-spacing: 1px;
-        font-family: 'Source Sans Pro', sans-serif;
-        text-align: center;
-    }
-    #mapContainer{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-</style>
-</body>
-</html> -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -97,12 +7,32 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js"></script>
 <style>
-body { margin: 0; padding: 0; }
-#map { position: absolute; top: 0; bottom: 0; width: 100%; }
+body { margin: 0; padding: 0; background-color: darkslategrey;}
+#map { position: absolute; width: 50%; height: 50%; top: 25%; border: hotpink; border-radius: 10px;}
+.container{
+  display: flex;
+  justify-content: center;
+}
+.banner{
+  display: flex;
+  background-color: teal;
+  width: 100%;
+  height: 100px;
+  justify-content: center;
+  font-size: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+  line-height: 100px;
+}
 </style>
 </head>
 <body>
-<div id="map"></div>
+  <div class="banner">
+    Smart Cane GPS Map
+  </div>
+  <div class="container">
+    <div id="map"></div>
+  </div>
 <script>
 	// TO MAKE THE MAP APPEAR YOU MUST
 	// ADD YOUR ACCESS TOKEN FROM
@@ -111,10 +41,9 @@ body { margin: 0; padding: 0; }
 const map = new mapboxgl.Map({
 container: 'map', // container ID
 style: 'mapbox://styles/mapbox/streets-v11', // style URL
-center: [145.060374, -37.8362118], // starting position [lng, lat]
-zoom: 20 // starting zoom
+center: [145.004795728903,-37.82661008356922], // starting position [lng, lat]
+zoom: 15 // starting zoom
 });
 </script>
- 
 </body>
-</html>
+</html> -->
