--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
   <div class="container">
     <div id="map"></div>
   </div>
+  <div id="location"></div>
   <script src="./script.js"></script>
 </body>
 
