--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,9 @@
   <div class="container">
     <div id="map"></div>
   </div>
-  <div id="location"></div>
+  <div class="locationDiv">
+    <div id="location"></div>
+  </div>
   <script src="./script.js"></script>
 </body>
 
