Added login page and css and login button on main page

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,12 @@
   </div>
   <div class="locationDiv">
     <div id="location"></div>
+    <button id="TTS" onclick="TTS()">
+      Test
+    </button>
+  </div>
+  <div class="loginbutton">
+    <button class="button" onclick="document.location='login.html'">Login</button>
   </div>
   <script src="./script.js"></script>
 </body>
