--- a/client/register.html
+++ b/client/register.html
@@ -16,31 +16,31 @@
       <div class="form" id=reg-form>
          <div class="inputfield">
             <label>First Name</label>
-            <input type="text" class="input" id="firstname">
+            <input type="text" class="input" id="firstname" autocomplete="off">
          </div>
          <div class="inputfield">
             <label>Last Name</label>
-            <input type="text" class="input" id="lastname">
+            <input type="text" class="input" id="lastname" autocomplete="off">
          </div>
          <div class="inputfield">
             <label>Password</label>
-            <input type="password" class="input" id="password">
+            <input type="password" class="input" id="password" autocomplete="off">
          </div>
          <div class="inputfield">
             <label>Confirm Password</label>
-            <input type="password" class="input" id="confirmPassword">
+            <input type="password" class="input" id="confirmPassword" autocomplete="off">
          </div>
          <div class="inputfield">
             <label>Email Address</label>
-            <input type="text" class="input" id="email">
+            <input type="text" class="input" id="email" autocomplete="off">
          </div>
          <div class="inputfield">
             <label>Phone Number</label>
-            <input type="text" class="input" id="phone">
+            <input type="text" class="input" id="phone" autocomplete="off">
          </div>
          <div class="inputfield">
             <label>Serial Number</label>
-            <input type="text" class="input" id="serial">
+            <input type="text" class="input" id="serial" autocomplete="off">
          </div>
          <div class="inputfield" id=submit>
             <input type="submit" value="Register" class="btn" id="comp">
