--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
     <div id="location"></div>
   </div>
   <div class="loginbutton">
-    <button class="button" onclick="document.location='login.html'">Login</button>
+    <button class="button" onclick="document.location='login.html'">Logout</button>
   </div>
   <script src="./script.js"></script>
 </body>
